--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -373,6 +373,13 @@
                 <td></td>
                 <td>+</td>
               </tr>
+              <tr>
+                <td>${{ index.sponsors_option_14 }}$</td>
+                <td></td>
+                <td>5%</td>
+                <td>10%</td>
+                <td>15%</td>
+              </tr>
               </thead>
             </table>
           </div>
